<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CountFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".fragments.CountFragment"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/etMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="96dp"
            android:layout_marginTop="148dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@string/message"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="209dp"
            android:text="@string/process" />

        <TextView
            android:id="@+id/tvMain"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="276dp"
            android:text="@string/result"
            android:textAlignment="center" />

    </RelativeLayout>
</FrameLayout>